# TT

Task_0/: CMakeLists.txt  main.cpp
Task_1/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_3/client/: CMakeLists.txt  main.cpp
Task_3/server/: CMakeLists.txt  main.cpp  shader_class.h
Task_3/server/glad/: glad.c  glad.h
